<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="app_name">DuoFinder</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="profile_btn">Profile</string>
    <string name="logout_btn">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="add_game">Add Games</string>
    <string name="admin">Admin</string>
    <string name="edit_account">Edit Account</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="send">Send</string>
    <string name="edit_games">Edit Games</string>
    <string name="user_list">User List</string>
    <string name="game_list">Game List</string>
    <string name="edit_profile">Edit Profile</string>
</resources>